--- a/date/2025-11/page-2.htm
+++ b/date/2025-11/page-2.htm
@@ -265,16 +265,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-12-9-vless-node.htm" title="顶级代理服务器 - 12月9日19.3M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点订阅机场推荐">顶级代理服务器 - 12月9日19.3M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-2-vless-node-github.htm" title="顶级代理服务器 - 12月2日20.2M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点订阅机场推荐">顶级代理服务器 - 12月2日20.2M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-18-vless-node-github.htm" title="顶级代理服务器 - 12月18日21.2M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点订阅机场推荐">顶级代理服务器 - 12月18日21.2M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-19-latest-vless-node.htm" title="顶级代理服务器 - 12月19日21.7M/S|免费Clash节点/Singbox节点/SSR节点/V2ray节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 12月19日21.7M/S|免费Clash节点/Singbox节点/SSR节点/V2ray节点/Shadowrocket节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-3-node-share-links.htm" title="顶级代理服务器 - 1月3日18.9M/S|免费SSR节点/Singbox节点/V2ray节点/Clash节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 1月3日18.9M/S|免费SSR节点/Singbox节点/V2ray节点/Clash节点/Shadowrocket节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-9-node-share-links.htm" title="顶级代理服务器 - 11月9日22.9M/S|免费Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 11月9日22.9M/S|免费Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-11-free-subscribe-node.htm" title="顶级代理服务器 - 12月11日22.5M/S|免费SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 12月11日22.5M/S|免费SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-25-today-vless-node.htm" title="顶级代理服务器 - 12月25日18.9M/S|免费V2ray节点/Singbox节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐">顶级代理服务器 - 12月25日18.9M/S|免费V2ray节点/Singbox节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-14-vless-windows.htm" title="顶级代理服务器 - 11月14日21.2M/S|免费V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 11月14日21.2M/S|免费V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-5-vless-node-github.htm" title="顶级代理服务器 - 11月5日18.9M/S|免费Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 11月5日18.9M/S|免费Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-11-latest-vless-node.htm" title="顶级代理服务器 - 11月11日22.3M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/SSR节点/Clash节点订阅机场推荐">顶级代理服务器 - 11月11日22.3M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/SSR节点/Clash节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-22-free-subscribe-node.htm" title="顶级代理服务器 - 11月22日18.2M/S|免费Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点订阅机场推荐">顶级代理服务器 - 11月22日18.2M/S|免费Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-27-vless-github.htm" title="顶级代理服务器 - 11月27日21.4M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅机场推荐">顶级代理服务器 - 11月27日21.4M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-13-vless-node-share.htm" title="顶级代理服务器 - 12月13日22.9M/S|免费Singbox节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点订阅机场推荐">顶级代理服务器 - 12月13日22.9M/S|免费Singbox节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-6-vless-node.htm" title="顶级代理服务器 - 11月6日18.1M/S|免费SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅机场推荐">顶级代理服务器 - 11月6日18.1M/S|免费SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-14-free-subscribe-node.htm" title="顶级代理服务器 - 12月14日22.1M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点订阅机场推荐">顶级代理服务器 - 12月14日22.1M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-18-free-node-subscribe.htm" title="顶级代理服务器 - 11月18日21.4M/S|免费SSR节点/Singbox节点/V2ray节点/Clash节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 11月18日21.4M/S|免费SSR节点/Singbox节点/V2ray节点/Clash节点/Shadowrocket节点订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -286,7 +286,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
