--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -247,7 +247,7 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://www.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" target="_blank"><b>农夫山泉</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://qqq.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" target="_blank"><b>农夫山泉</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -291,7 +291,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://www.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://qqq.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -527,16 +527,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-12-14-free-subscribe-node.htm" title="顶级代理服务器 - 12月14日22.1M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点订阅机场推荐">顶级代理服务器 - 12月14日22.1M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-11-free-subscribe-node.htm" title="顶级代理服务器 - 12月11日22.5M/S|免费SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 12月11日22.5M/S|免费SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-9-vless-node.htm" title="顶级代理服务器 - 12月9日19.3M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点订阅机场推荐">顶级代理服务器 - 12月9日19.3M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-3-free-node-subscribe.htm" title="顶级代理服务器 - 12月3日21.5M/S|免费Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 12月3日21.5M/S|免费Singbox节点/V2ray节点/SSR节点/Clash节点/Shadowrocket节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-21-free-vless-node.htm" title="顶级代理服务器 - 11月21日22.3M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 11月21日22.3M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-16-vless-github.htm" title="顶级代理服务器 - 12月16日21.9M/S|免费V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 12月16日21.9M/S|免费V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-17-latest-vless-node.htm" title="顶级代理服务器 - 12月17日21.3M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 12月17日21.3M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-10-free-subscribe-node.htm" title="顶级代理服务器 - 11月10日21.2M/S|免费Shadowrocket节点/SSR节点/Singbox节点/Clash节点/V2ray节点订阅机场推荐">顶级代理服务器 - 11月10日21.2M/S|免费Shadowrocket节点/SSR节点/Singbox节点/Clash节点/V2ray节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-22-free-subscribe-node.htm" title="顶级代理服务器 - 11月22日18.2M/S|免费Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点订阅机场推荐">顶级代理服务器 - 11月22日18.2M/S|免费Singbox节点/Shadowrocket节点/Clash节点/SSR节点/V2ray节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-29-vless-github.htm" title="顶级代理服务器 - 11月29日19M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅机场推荐">顶级代理服务器 - 11月29日19M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-20-vless-node-share.htm" title="顶级代理服务器 - 11月20日21.2M/S|免费Singbox节点/Shadowrocket节点/V2ray节点/Clash节点/SSR节点订阅机场推荐">顶级代理服务器 - 11月20日21.2M/S|免费Singbox节点/Shadowrocket节点/V2ray节点/Clash节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-20-free-vless-node.htm" title="顶级代理服务器 - 12月20日22.2M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅机场推荐">顶级代理服务器 - 12月20日22.2M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-18-free-node-subscribe.htm" title="顶级代理服务器 - 11月18日21.4M/S|免费SSR节点/Singbox节点/V2ray节点/Clash节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 11月18日21.4M/S|免费SSR节点/Singbox节点/V2ray节点/Clash节点/Shadowrocket节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-12-vless-node-github.htm" title="顶级代理服务器 - 11月12日18.6M/S|免费V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点订阅机场推荐">顶级代理服务器 - 11月12日18.6M/S|免费V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-27-vless-github.htm" title="顶级代理服务器 - 11月27日21.4M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅机场推荐">顶级代理服务器 - 11月27日21.4M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-17-latest-vless-node.htm" title="顶级代理服务器 - 12月17日21.3M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 12月17日21.3M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-9-vless-node.htm" title="顶级代理服务器 - 12月9日19.3M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点订阅机场推荐">顶级代理服务器 - 12月9日19.3M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-22-vless-windows.htm" title="顶级代理服务器 - 12月22日19.5M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅机场推荐">顶级代理服务器 - 12月22日19.5M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-25-today-vless-node.htm" title="顶级代理服务器 - 12月25日18.9M/S|免费V2ray节点/Singbox节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐">顶级代理服务器 - 12月25日18.9M/S|免费V2ray节点/Singbox节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -548,7 +548,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
